add movies, remove pages, and select publications

--- a/_config.yml
+++ b/_config.yml
@@ -171,6 +171,8 @@ kramdown:
 # Includes & excludes
 include: ["_pages", "_scripts"]
 exclude:
+  - _pages/projects.md
+  - _pages/teaching.md
   - _pages/profiles.md
   - _pages/blog.md
   - bin/
